Clean up (includes and formatting).